buildscript {
	repositories {
		maven { url = 'https://maven.minecraftforge.net' }
//        maven { url = 'https://repo.spongepowered.org/maven' }
		maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
		mavenCentral()
	}
	dependencies {
		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
	}
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'

// Maven info
archivesBaseName = project.archives_base_name
version = "${minecraft_version}-${mod_version}"
group = project.maven_group

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
	mappings channel: 'official', version: '1.18.1'
	// accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.

	runs {
		client {
			workingDirectory project.file('run')
			arg "-mixin.config=paxi.mixins.json"
//            property 'forge.logging.markers', 'REGISTRIES'
//            property 'forge.logging.console.level', 'debug'
			property 'mixin.env.remapRefMap', 'true'
			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

			mods {
				paxi {
					source sourceSets.main
				}
			}
		}

		server {
			workingDirectory project.file('run')
			arg "-mixin.config=paxi.mixins.json"
//            property 'forge.logging.markers', 'REGISTRIES'
//            property 'forge.logging.console.level', 'debug'
			property 'mixin.env.remapRefMap', 'true'
			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

			mods {
				paxi {
					source sourceSets.main
				}
			}
		}

		data {
			workingDirectory project.file('run')
//            property 'forge.logging.markers', 'REGISTRIES'
//            property 'forge.logging.console.level', 'debug'
			property 'mixin.env.remapRefMap', 'true'
			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

			// Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
			args '--mod', "paxi", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

			mods {
				paxi {
					source sourceSets.main
				}
			}
		}
	}
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

//repositories {
//  // Local file repository for testing purposes
//	flatDir {
//		dir 'libs'
//	}
//}

dependencies {
	minecraft 'net.minecraftforge:forge:1.18.1-39.0.7'
	implementation fg.deobf("com.yungnickyoung.minecraft.yungsapi:YungsApi:${yungs_api_version}")
//	 implementation fg.deobf("yungsapi:YungsApi:1.18.1-Forge-23") // Local file dep for testing purposes
	if (System.getProperty("idea.sync.active") != "true") {
		annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
	}
}

jar {
	manifest {
		attributes([
				"Specification-Title"     : mod_id,
				"Specification-Vendor"    : "YUNGNICKYOUNG",
				"Specification-Version"   : "1", // We are version 1 of ourselves
				"Implementation-Title"    : project.name,
				"Implementation-Version"  : "${version}",
				"Implementation-Vendor"   : "YUNGNICKYOUNG",
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
				"Signing-Fingerprint"     : project.hasProperty('signSHA1') ? project.findProperty('signSHA1') : "unsigned",
				"MixinConfigs": "paxi.mixins.json"
		])
	}
}

jar.finalizedBy('reobfJar')

mixin {
	add sourceSets.main, "paxi.refmap.json"
}
